--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="social-icons">
             <a href=""><i class="fab fa-linkedin-in"></i></a>
             <a href=""><i class="fab fa-discord"></i></a>
-            <a href=""><i class="fab fa-twitter">https://www.instagram.com/th13teen.x/</i></a>
-            <a href=""><i class="fab fa-instagram-square">https://www.instagram.com/th13teen.x/</i></a>
+            <a href=""><i class="fab fa-twitter"></i>https://www.instagram.com/th13teen.x/</a>
+            <a href=""><i class="fab fa-instagram-square">/</i>https://www.instagram.com/th13teen.x</a>
 
         </div>
     </div>
@@ -195,8 +195,8 @@
         <span>Bolivar 13</span></p>
     <div class="social-icons">
         <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-twitter">https://twitter.com/th13teen_x</i></a>
-        <a href="#"><i class="fab fa-instagram"> https://www.instagram.com/th13teen.x/</i></a>
+        <a href="#"><i class="fab fa-twitter"></i>https://twitter.com/th13teen_x</a>
+        <a href="#"><i class="fab fa-instagram"> </i>https://www.instagram.com/th13teen.x/</a>
         <a href="#"><i class="fab fa-youtube"></i></a>
     </div>
 </footer>
