--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href=""><i class="fab fa-linkedin-in"></i></a>
             <a href=""><i class="fab fa-discord"></i></a>
             <a href=""><i class="fab fa-twitter"></i></a>
-            <a href=""><i class="fab fa-instagram-square">/</i></a>
+            <a href=""><i class="fab fa-instagram-square"></i></a>
 
         </div>
     </div>
