--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
 
 
 <footer class="footer">
-    <p class="footer-title">Copyrights @ 
+    <p class="footer-title">Copyrights ©
         <span>Bolivar 13</span></p>
     <div class="social-icons">
         <a href="#"><i class="fab fa-linkedin"></i></a>
         <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-instagram"> </i></a>
+        <a href="https://www.instagram.com/th13teen.x/"><i class="fab fa-instagram"> </i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
     </div>
 </footer>
