--- a/sign-up.html
+++ b/sign-up.html
@@ -15,8 +15,8 @@
     
     <a href="index.html" class="logo">Music X B13</a>
     <nav class="navigation"> 
-        <a href="Music.X.13.html">Home</a>
-        <a href="Music.X.13.html">Services</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Services</a>
         <a href="#Music">Music</a> 
         <a href="#Contacts">Contacts</a>  
         
