--- a/sign-up.html
+++ b/sign-up.html
@@ -30,14 +30,14 @@
     <fieldset>
         <h1>Sign up</h1>
         
-        <label for="nom">Nom</label></br>
-        <input type="text"></br>
+        <label for="nom">Name</label></br>
+        <input type="text"  placeholder="Entrer Your Name" ></br>
 
-        <label for="nom">Prenom</label></br>
-        <input type="text"></br>
+        <label for="nom">LastName</label></br>
+        <input type="text"   placeholder="Entrer Your LastName" ></br>
 
         <label for="Email">Email</label></br>
-        <input type="email"></br>
+        <input type="email"   placeholder="Entrer Your Email" ></br>
    
         <label for="Tel">Phone Number</label></br>
         <input type="tel" placeholder="Entrer Your Number"></br>
