--- a/sign-up.html
+++ b/sign-up.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut   icon" href="img/13.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+
     <title>Music Station B13</title>
 </head>
 <body>
