--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
     </div>  
     <ul class="player__playlist list"> 
         
-                <li class="player__song">  
+           <li class="player__song">  
             <img class="player__img img" src="img/mouden.jpg" alt="cover">  
             <p class="player__context">  
-             <b class="player__song-name">Wesh A Broo</b>  
+             <b class="player__song-name">💖 Yemma 💖</b>  
              <span class="flex">  
               <span class="player__title">MetraQa</span>  
               <span class="player__song-time"></span>  
              </span>  
             </p>  
-         <audio class="audio" src="aud/brow.mp3"></audio>  
+         <audio class="audio" src="aud/Yemma.mp3"></audio>  
            </li>  
         
      <li class="player__song">  
