--- a/sign-up.html
+++ b/sign-up.html
@@ -35,16 +35,16 @@
         <h1>Sign up</h1>
         
         <label for="nom">Name</label></br>
-        <input type="text" placeholder="Entrer Your Name" class=" form-conrol "></br>
+        <input type="text" placeholder="Entrer Your Name" ></br>
 
         <label for="nom">LastName</label></br>
-        <input type="text" placeholder="Entrer Your LastName" class="form-conrol" ></br>
+        <input type="text" placeholder="Entrer Your LastName"  ></br>
 
         <label for="Email">Email</label></br>
-        <input type="email"  placeholder="Entrer Your Email" class="form-conrol"></br>
+        <input type="email"  placeholder="Entrer Your Email" "></br>
    
         <label for="Tel">Phone Number</label></br>
-        <input type="tel" placeholder="Entrer Your Phone" class="form-conrol"></br>
+        <input type="tel" placeholder="Entrer Your Phone" ></br>
    
         <button class="button_1 btn btn-outline-danger" type="submit">Sign Up</button>
 </div>
