--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h3>Made By Bolivar 13</h3>
         <a href="" class="main-btn">   </a>
         <div class="social-icons">
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
+            <a href=""><i class="fab fa-github"></i></a>
             <a href=""><i class="fab fa-discord"></i></a>
             <a href=""><i class="fab fa-twitter"></i></a>
             <a href=""><i class="fab fa-instagram-square"></i></a>
