--- a/index.html
+++ b/index.html
@@ -75,23 +75,25 @@
      </div>  
    <div class="player__controls">  
       <button class="player__button back">  
-       <img class="img" src="http://physical-authority.surge.sh/imgs/icon/back.svg" alt="back-icon">  
+      <!------------------------img----------------------------->   
+
+       <img class="img" src="img/back  .png" alt="back-icon">  
       </button>  
       <p class="player__context slider__context">  
        <strong class="slider__name"></strong>  
        <span class="player__title slider__title"></span>  
       </p>  
       <button class="player__button next">  
-       <img class="img" src="http://physical-authority.surge.sh/imgs/icon/next.svg" alt="next-icon">  
+       <img class="img" src="img/next.png" alt="next-icon">  
     </button>  
       <div class="progres">  
        <div class="progres__filled"></div>  
       </div>  
      </div>  
     </div>  
-    <ul class="player__playlist list"> 
-        
-           <li class="player__song">  
+    <ul class="player__playlist list">  
+
+        <li class="player__song">  
             <img class="player__img img" src="img/mouden.jpg" alt="cover">  
             <p class="player__context">  
              <b class="player__song-name">💖 Yemma 💖</b>  
@@ -102,9 +104,10 @@
             </p>  
          <audio class="audio" src="aud/Yemma.mp3"></audio>  
            </li>  
-        
+
+
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/1.jpg" alt="cover">  
+      <img class="player__img img" src="img/no-time.jpg" alt="cover">  
       <p class="player__context">  
        <b class="player__song-name">no time</b>  
        <span class="flex">  
@@ -115,7 +118,7 @@
    <audio class="audio" src="http://physical-authority.surge.sh/music/1.mp3"></audio>  
      </li>  
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/2.jpg" alt="cover">  
+      <img class="player__img img" src="img/weeknd.jpg" alt="cover">  
       <p class="player__context">  
        <b class="player__song-name">blinding lights</b>  
        <span class="flex">  
@@ -126,7 +129,7 @@
       <audio class="audio" src="http://physical-authority.surge.sh/music/2.mp3"></audio>  
      </li>  
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/3.jpg" alt="cover">  
+      <img class="player__img img" src="img/enrasta.jpg" alt="cover">  
       <p class="player__context">  
        <b class="player__song-name">джованна</b>  
        <span class="flex">  
@@ -137,7 +140,7 @@
       <audio class="audio" src="http://physical-authority.surge.sh/music/3.mp3"></audio>  
      </li>  
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/4.jpg" alt="cover">  
+      <img class="player__img img" src="img/a man.jpg" alt="cover">  
       <p class="player__context">  
        <b class="player__song-name">a man</b>  
        <span class="flex">  
@@ -148,7 +151,7 @@
       <audio class="audio" src="http://physical-authority.surge.sh/music/4.mp3"></audio>  
      </li>  
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/5.jpg" alt="cover">  
+      <img class="player__img img" src="img/zaxx.jpg" alt="cover">  
       <p class="player__context ">  
        <b class="player__song-name">unforgetting</b>  
        <span class="flex">  
@@ -159,7 +162,7 @@
       <audio class="audio" src="http://physical-authority.surge.sh/music/5.mp3"></audio>  
      </li>  
      <li class="player__song">  
-         <img class="player__img img" src="http://physical-authority.surge.sh/imgs/6.jpg" alt="cover">  
+         <img class="player__img img" src="img/waharan.jpg" alt="cover">  
       <p class="player__context">  
           <b class="player__song-name">waharan</b>  
        <span class="flex">  
@@ -170,7 +173,7 @@
       <audio class="audio" src="http://physical-authority.surge.sh/music/6.mp3"></audio>  
      </li>  
      <li class="player__song">  
-      <img class="player__img img" src="http://physical-authority.surge.sh/imgs/7.jpg" alt="cover">  
+      <img class="player__img img" src="img/starlight.jpg" alt="cover">  
       <p class="player__context ">  
        <b class="player__song-name">starlight feat mr gabriel <span class="uppercase">4am</span> remix</b>  
        <span class="flex">  
@@ -179,7 +182,8 @@
        </span>  
       </p>  
       <audio class="audio" src="http://physical-authority.surge.sh/music/7.mp3"></audio>  
-    </li>  
+    </li> 
+ <!---------------------------end img--------------------->   
     </ul>  
    </div> 
 
