--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <p class="footer-title">Copyrights ©
         <span>Bolivar 13</span></p>
     <div class="social-icons">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href=""><i class="fab fa-github"></i></a>
         <a href=""><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/th13teen.x/"><i class="fab fa-instagram"> </i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
