--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <title>Document</title>
     <style>
         body{
-            background-image: url(/img/n3.jpg);
+            background-image: url(img/n3.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
