--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </nav>
      
   <div> <button type="button" class="log-in">  <a href="#"> login </a> </button></div> 
- <div>  <button type="button" class="sign-up"> <a href="sign-up.html"> Sign Up</a> </button></div>
+ <div>  <button type="button" class="sign-up"> <a href="login.html"> Sign Up</a> </button></div>
 
     
 </header>
