--- a/login.html
+++ b/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut   icon" href="img/13.jpg" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title> 🔰Sign-Up 🔰</title>
     <style>
         body{
             background-image: url(img/n3.jpg);
