--- a/login.html
+++ b/login.html
@@ -410,7 +410,7 @@
                 </div>
                 
                  <div class="registre c">
-                     <button type="submit" class="col-12 btn btn-outline-primary">
+                     <button type="submit" class="col-12 btn btn-outline-danger">
                          <h6 class="">Registre Now</h6>
                      </button>
                  </div>
