--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
 
 <section class="main" id="Home">
     <div>
-        <h2>  <br><span> Welcome To 'Music Station X B13' </span></h2>
-        <h3>Made By Bolivar 13</h3>
+        <h2>  <br><span> Music Distribution for Artists </span></h2>
+        <h3Distribute your music to Spotify, Apple Music, Google Play, Amazon Music and more.</h3>
         <a href="" class="main-btn">   </a>
         <div class="social-icons">
-            <a href=""><i class="fab fa-github"></i></a>
-            <a href=""><i class="fab fa-discord"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
-            <a href=""><i class="fab fa-instagram-square"></i></a>
-
+            <a href=""  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
+            <a href="" style="color: gray;"><i class="fab fa-github"></i></a>
+            <a href=" " style="color: #1ed760; " ><i class="fab fa-spotify"></i></a>
+            <a href=" "style=" color: rgb(29, 155, 240); " ><i class="fab fa-twitter"></i></a>
+            
+<!----------- button start ---------->
+            
+        <div class="start" >
+           Get Started
+        </div>
         </div>
     </div>
 </section>
