--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="" class="main-btn">   </a>
         <div class="social-icons">
             <a href=""  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
-            <a href="" style="color: gray;"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Bolivar13" style="color: gray;"><i class="fab fa-github"></i></a>
             <a href=" " style="color: #1ed760; " ><i class="fab fa-spotify"></i></a>
             <a href=" "style=" color: rgb(29, 155, 240); " ><i class="fab fa-twitter"></i></a>
             
@@ -228,10 +228,11 @@
     <p class="footer-title">Copyrights ©
         <span>Bolivar 13</span></p>
     <div class="social-icons">
-        <a href=""><i class="fab fa-github"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/th13teen.x/"><i class="fab fa-instagram"> </i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href=" https://github.com/Bolivar13" style="color: grey; "><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/th13teen_x?t=LgUBbkimI_Du1POHV4DK5Q&s=09" style=" color: rgb(29, 155, 240);"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com/th13teen.web?utm_medium=copy_link" style="color:  rgb(225,48,108) " ><i class="fab fa-instagram"></i></a>
+        <a href="https://youtube.com/channel/UCzs2-VPY-s65GgOEBZUDb2g"   style="color: red; " ><i class="fab fa-youtube"></i></a>
+        
     </div>
 </footer>
 
