--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href=""  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
             <a href="https://github.com/Bolivar13" style="color: gray;"><i class="fab fa-github"></i></a>
             <a href=" " style="color: #1ed760; " ><i class="fab fa-spotify"></i></a>
-            <a href=" "style=" color: rgb(29, 155, 240); " ><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/th13teen_x"style=" color: rgb(29, 155, 240); " ><i class="fab fa-twitter"></i></a>
             
 <!----------- button start ---------->
             
