--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <h3Distribute your music to Spotify, Apple Music, Google Play, Amazon Music and more.</h3>
         <a href="" class="main-btn">   </a>
         <div class="social-icons">
-            <a href=""  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
+            <a href="https://www.reddit.com/user/logan_bng"  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
             <a href="https://github.com/Bolivar13" style="color: gray;"><i class="fab fa-github"></i></a>
-            <a href=" " style="color: #1ed760; " ><i class="fab fa-spotify"></i></a>
+            <a href="https://open.spotify.com/user/31sfebkgy25mh7bqud6wjnvm2omq " style="color: #1ed760; " ><i class="fab fa-spotify"></i></a>
             <a href="https://twitter.com/th13teen_x"style=" color: rgb(29, 155, 240); " ><i class="fab fa-twitter"></i></a>
             
 <!----------- button start ---------->
