--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      </nav>
      
   <div> <button type="button" class="log-in">  <a href="#"> log in </a> </button></div> 
- <div>  <button type="button" class="sign-up"> <a href="login.html"> Sign Up</a> </button></div>
+ <div>  <button type="button" class="sign-up"> <a href="signup.html"> Sign Up</a> </button></div>
 
     
 </header>
