--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
             <div class="info">
                 <h3>Phone</h3>
-                <p>+212689901798</p>
+                <p type="phone">+212689901798</p>
             </div>
         </div>
         <div class="card">
@@ -259,7 +259,7 @@
             </div>
             <div class="info">
                 <h3>Email</h3>
-                <p>mohamedbengar51@gmail.com</p>
+                <p type="email">mohamedbengar51@gmail.com</p>
             </div>
         </div>
     </div>
