--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       </button>  
       <div class="slider__content">  
           
-                  <img class="img slider__img" src="img/mouden.jpg" alt="cover">  
-                   <img class="img slider__img" src="img/wesh.jpg" alt="cover">
+<!--                   <img class="img slider__img" src="img/mouden.jpg" alt="cover">   -->
+<!--                    <img class="img slider__img" src="img/wesh.jpg" alt="cover"> -->
 
           
           <img class="img slider__img" src="http://physical-authority.surge.sh/imgs/1.jpg" alt="cover">  
