--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="main" id="Home">
     <div>
         <h2>  <br><span> Music Distribution for Artists </span></h2>
-        <h3> Distribute your music to Spotify, Apple Music, Google Play, Amazon Music and more. (Made by Simon BOLIVAR)</h3>
+        <h3> Distribute your music to Spotify, Apple Music, Google Play, Amazon Music and more. (Made BOLIVAR)</h3>
         <a href="" class="main-btn">   </a>
         <div class="social-icons">
             <a href="https://www.reddit.com/user/logan_bng"  style="color: orangered;"  > <i class="fab fa-reddit"  ></i></a>
